<resources>
    <string name="app_name">HW25</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_list">Список контактов</string>
    <string name="contact_permission_denied_read">Чтение контактов запрещено</string>
    <string name="contact_permission_denied_write">Изменение контактов запрещены</string>
    <string name="permission_denied_read_never_ask_again">Для продолжения
        работы разрешите чтение контактов в настройках приложения</string>
    <string name="permission_denied_write_never_ask_again">Для продолжения
        работы разрешите изменение контактов в настройках приложения</string>
    <string name="error">Ошибка!</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Электронная почта</string>
    <string name="delete_contact">Удалить контакт</string>
    <string name="add_contact_name">Имя (обязательно для заполнения)</string>
    <string name="add_new_contact">Добавление нового контакта</string>
    <string name="add_phone_number">Телефон (обязательно для заполнения)</string>
    <string name="add_email">Email</string>
    <string name="add">Добавить</string>
    <string name="add_phone_number2">Телефон</string>
    <string name="download_and_share_files">Скачать и расшарить файлы</string>
    <string name="contact_list">Список контактов</string>
    <string name="input_url">Введите url файла</string>
    <string name="download_and_share">Скачать и поделиться</string>
    <string name="download_is_successful">Скачивание завершено!</string>
    <string name="url1"><![CDATA[https://img1.fonwall.ru/o/hr/artwork-glasses-whisker-wallpaper-cool-cat.jpeg]]></string>
    <string name="url2"><![CDATA[https://avidreaders.ru/download/oblomov.html?f=pdf]]></string>
    <string name="url3"><![CDATA[https://filesamples.com/samples/document/txt/sample3.txt]]></string>
    <string name="push_the_link">Нажми на ссылку:</string>
</resources>